@@ -2,6 +2,8 @@ Changes
 Check.pm
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -16,16 +18,16 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Tie-Hash-Check/00-use.t
-t/Tie-Hash-Check/01-version.t
-t/Tie-Hash-Check/02-pod_coverage.t
-t/Tie-Hash-Check/03-pod.t
-t/Tie-Hash-Check/04-tiehash.t
-t/Tie-Hash-Check/05-clear.t
-t/Tie-Hash-Check/06-delete.t
-t/Tie-Hash-Check/07-exists.t
-t/Tie-Hash-Check/08-fetch.t
-t/Tie-Hash-Check/09-firstkey.t
-t/Tie-Hash-Check/10-nextkey.t
-t/Tie-Hash-Check/11-scalar.t
-t/Tie-Hash-Check/12-store.t
+t/Tie-Hash-Check/01-use.t
+t/Tie-Hash-Check/02-version.t
+t/Tie-Hash-Check/03-tiehash.t
+t/Tie-Hash-Check/04-clear.t
+t/Tie-Hash-Check/05-delete.t
+t/Tie-Hash-Check/06-exists.t
+t/Tie-Hash-Check/07-fetch.t
+t/Tie-Hash-Check/08-firstkey.t
+t/Tie-Hash-Check/09-nextkey.t
+t/Tie-Hash-Check/10-scalar.t
+t/Tie-Hash-Check/11-store.t
+xt/Tie-Hash-Check/01-pod_coverage.t
+xt/Tie-Hash-Check/02-pod.t
